--- a/src/index.css
+++ b/src/index.css
@@ -2,66 +2,63 @@
   margin: 0;
   padding: 0;
 }
-
 body {
   background-color: rgb(44, 43, 43);
   color: white;
+  font-family: "Open Sans", sans-serif;
 }
-
 .newsletter-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-
 .newsletter-content {
   width: 80vw;
   padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
-  /* border: 1px solid #ccc; */
-  /* border-radius: 5px; */
 }
-
-.newsletter-content h1 {
+.newsletter-content p {
   margin-bottom: 5px;
+  font-size: 50px;
 }
-.newsletter-content h4 {
+/* .newsletter-content h4 {
   color: lightgrey;
   margin-top: 20px;
   margin-bottom: 30px;
-}
-
+} */
 .newsletter-content input {
-  width: 400px; /* Adjust based on button width */
+  width: 40vw; /* Adjust based on button width */
   margin-bottom: 10px;
+  margin-top: 50px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 20px;
 }
-
 .newsletter-content button {
   width: 100px; /* Adjust width as needed */
   margin-left: 10px;
   padding: 10px;
   border: none;
   border-radius: 20px;
-  background-color: grey;
-  color: white;
+  background-color: #4e4c4c;
+  color: gray;
   cursor: pointer;
+  font-weight: bold;
+  padding: 10px 20px;
 }
-
-.newsletter-content button:hover {
+/* .newsletter-content button:hover {
   background-color: darkgray;
-}
-
+} */
 .blog-grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 5px;
+  /* gap: 5px; */
+  margin: 30px;
+  border-radius: 30px;
+  background-color: #393737;
 }
 
 .blog-card-main {
@@ -69,41 +66,50 @@ body {
   flex-direction: column;
   justify-content: space-around;
   height: 40vh;
-  /* width: 40vw; */
-  border: 1px solid #eee;
-  border-radius: 0px;
   padding: 20px;
+  border-bottom: grey 1px solid;
   /* margin: 10px; */
 }
-
+.ml-10 {
+  margin-left: 10px;
+  
+}
+.blog-card-main:nth-child(odd) {
+  border-right: grey 1px solid;
+  border-bottom-left-radius: 30px;
+}
+.blog-card-main:nth-child(even) {
+  border-bottom-right-radius: 30px;
+}
 .blog-decoration {
   /* margin-top: 20px; */
   width: 5vw;
   height: 2px;
+  margin-top: 20px;
   background-image: linear-gradient(to right, rgb(210, 5, 179), blue);
 }
 .blog-heading {
-  margin: 10px;
+  margin-top: 10px;
   font-size:xx-large;
 }
 .blog-desc {
-  margin-left: 5px;
+  /* margin-left: 5px; */
   margin-right: 10px;
-  height: 4em;
-  color: lightgrey;
+  /* height: 4em; */
+  color: #7f7b7b;
   overflow: hidden; /* Hides overflow */
   text-overflow: ellipsis;
-  font-size:large;
+  font-size:16px;
+  line-height: 25px;
 }
 .blog-details-btn {
-  /* position: absolute; */
-  left: 10px;
-  bottom: 10px;
-  /* margin-top: 10px; */
-  width: 100px;
-  height: 40px;
-  padding: 5px;
+  padding: 10px 20px;
   border-radius: 15px;
+  background-color: #4e4c4c;
+  color: white;
+  border: none;
+  font-weight: bold; 
+  cursor: pointer;
 }
 
 .head-container {
@@ -119,26 +125,29 @@ body {
 .head-icon img {
   /* width: 20vw;
     height: 20vh; */
-  width: 15vw;
+  width: 300px;
+  border-radius: 50%;
 }
 .head-text {
   display: flex;
   flex-direction: column;
   /* text-align: center; */
   width: 70vw;
-  /* justify-content  : space-around; */
-  /* margin: 15px 15px 15px 15px; */
 }
 .head-title-text {
   font-size: xxx-large;
-  margin: 30px 15px 15px 15px;
+  margin-top: 30px;
+  padding: 10px;
 }
 .head-title-desc {
-  margin-top: 10px;
-  margin-left: 15px;
-  font-size: large;
-  height: 10em;
-  overflow: auto;
+  margin-top: 20px;
+  /* margin-left: 15px; */
+  font-size:16px;
+  line-height: 25px;
+  /* height: 10em; */
+  padding: 10px;
+  /* overflow: auto; */
+  color: #7f7b7b;
 }
 .blog-view-main-container{
   display: flex;
@@ -152,15 +161,17 @@ body {
   justify-content: center;
   padding: 10px;
   margin-top: 20px;
-  width: 50vw;
+  width: 75vw;
 }
 .blog-view-heading{
-  font-size: 60px;
+  font-size: 50px;
   color: white
 }
 .blog-view-content{
   margin-top: 30px;
-  font-size: x-large;
+  padding: 20px;
+  font-size: large;
+  background-color: #393737;
 }
 
 @media (max-width: 600px) {
@@ -199,5 +210,9 @@ body {
     font-size: x-large ;
   }.blog-view-content{
     font-size: medium;
+  }
+
+  .blog-decoration {
+    width: 60px;
   }
 }
