--- a/src/index.css
+++ b/src/index.css
@@ -36,15 +36,16 @@ body {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 20px;
+  background-color: lightgray;
 }
 .newsletter-content button {
-  width: 100px; /* Adjust width as needed */
+  /* width: 100px; Adjust width as needed */
   margin-left: 10px;
-  padding: 10px;
+  /* padding: 10px; */
   border: none;
   border-radius: 20px;
   background-color: #4e4c4c;
-  color: gray;
+  color: white;
   cursor: pointer;
   font-weight: bold;
   padding: 10px 20px;
@@ -164,7 +165,7 @@ body {
   width: 75vw;
 }
 .blog-view-heading{
-  font-size: 50px;
+  font-size: xxx-large;
   color: white
 }
 .blog-view-content{
@@ -172,6 +173,8 @@ body {
   padding: 20px;
   font-size: large;
   background-color: #393737;
+  color: #7f7b7b;
+  border-radius: 20px;
 }
 
 @media (max-width: 600px) {
