--- a/src/index.css
+++ b/src/index.css
@@ -137,19 +137,11 @@ body {
   padding: 10px;
   color: #7f7b7b;
 }
-.blog-view-main-container {
-  display: flex;
-  /* align-items: center; */
-  justify-content: center;
-}
+
 .blog-view-container {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
   padding: 10px;
-  margin-top: 20px;
   width: 75vw;
+  margin: 20px auto;
 }
 .blog-view-heading {
   font-size: xxx-large;
