--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body {
   padding: 10px 20px;
 }
 .newsletter-content button:hover {
+  transform: scale(1.1);
   background-color: rgb(91, 86, 86);
 }
 .blog-grid-container {
@@ -88,12 +89,13 @@ body {
 .blog-desc {
   margin-right: 10px;
   color: #7f7b7b;
-  overflow: hidden; /* Hides overflow */
-  text-overflow: ellipsis;
+  /* overflow: hidden; Hides overflow */
+  /* text-overflow: ellipsis; */
   font-size: 16px;
   line-height: 25px;
 }
 .blog-details-btn {
+  /* margin-top: 2px; */
   padding: 10px 20px;
   border-radius: 15px;
   background-color: #4e4c4c;
@@ -101,6 +103,8 @@ body {
   border: none;
   font-weight: bold;
   cursor: pointer;
+}.blog-details-btn:hover {
+  transform: scale(1.1);
 }
 
 .head-container {
@@ -114,8 +118,6 @@ body {
   align-items: center;
 }
 .head-icon img {
-  /* width: 20vw;
-    height: 20vh; */
   width: 300px;
   border-radius: 50%;
 }
@@ -137,11 +139,19 @@ body {
   padding: 10px;
   color: #7f7b7b;
 }
-
+.blog-view-main-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #4A2574;
+  width: 100%;
+  /* height: 100vh; */
+}
 .blog-view-container {
   padding: 10px;
   width: 75vw;
-  margin: 20px auto;
+  margin: 20px auto auto auto;
 }
 .blog-view-heading {
   font-size: xxx-large;
@@ -151,16 +161,88 @@ body {
   margin-top: 30px;
   padding: 20px;
   font-size: large;
-  background-color: #393737;
-  color: #7f7b7b;
+  background-color: #7338A0;
+  color: white;
   border-radius: 20px;
 }
+.blog-img1{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  margin-top: 20px;
+}
+.blog-footer-container{
+  margin-top: 30px;
+  width: 100%;
+  background-color: #0F0529;
+}
+/* .title-and-icons{
+  padding: 10px;
+  width: 75vw;
+  margin: 20px auto;
+} */
+.blog-footer{
+  padding: 10px;
+  width: 75vw;
+  margin: 20px auto;
+}
+.blog-social-title{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+.social-icons{
+  display: flex;
+  margin-top: 10px;
+}
+.single-icon{
+  margin: 0 10px;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+.footer-options{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  margin-top: 20px;
+}
+.single-option{
+  font-size: 15px;
+  /* text-align: ce; */
+  cursor: pointer;
+  color: white;
+  padding: 10px;
+}
+
+.more-blog-btn-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.more-blog-btn{
+  padding: 10px 25px;
+  border-radius: 15px;
+  font-size: 15px;
+  background-color: #9E72C3;
+  color: white;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+.more-blog-btn:hover {
+  transform: scale(1.1);
+}
+
+
 
 /* Media queries for responsiveness */
 @media (max-width: 600px) {
   .newsletter-content input[type="email"] {
-    width: 80vw; /* Adjust width as needed for small devices */
+    width: 80vw;
     align-items: center;
+  }
+  .newsletter-content p {
+    font-size: 35px;
   }
 
   .blog-grid-container {
@@ -182,10 +264,11 @@ body {
   .head-text {
     display: flex;
     flex-direction: column;
-    /* text-align: center; */
+    text-align: center;
     width: 100vw;
   }
 
+  /* Full blog page css ------------- */
   .blog-view-container {
     width: 100vw;
     /* padding: 5px; */
@@ -196,8 +279,33 @@ body {
   .blog-view-content {
     font-size: medium;
   }
+  .blog-card-main:nth-child(odd) {
+    border-right:none;
+    border-bottom-left-radius: 0px;
+  }
+  .blog-card-main:nth-child(even) {
+    border-bottom-right-radius: 0px;
+  }
+  .blog-card-main:last-child {
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+  }
 
   .blog-decoration {
     width: 60px;
   }
+
+  /* Footer css ------------- */
+  .blog-social-title{
+    font-size: 20px;
+  }
+  .footer-options{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  /* .title-and-icons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  } */
 }
