--- a/src/index.css
+++ b/src/index.css
@@ -149,9 +149,9 @@ body {
   /* height: 100vh; */
 }
 .blog-view-container {
-  padding: 10px;
+  /* padding: 10px; */
   width: 75vw;
-  margin: 20px auto auto auto;
+  margin: 20px ;
 }
 .blog-view-heading {
   font-size: xxx-large;
@@ -167,9 +167,10 @@ body {
 }
 .blog-img1{
   width: 100%;
-  height: 100%;
+  height: 60vh;
+  object-fit: contain;
   border-radius: 20px;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .blog-footer-container{
   margin-top: 30px;
@@ -200,6 +201,9 @@ body {
   color: white;
   cursor: pointer;
 }
+.single-icon:hover{
+  transform: scale(1.2);
+}
 .footer-options{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -212,6 +216,9 @@ body {
   cursor: pointer;
   color: white;
   padding: 10px;
+}
+.single-option:hover{
+  text-shadow: 0px 0px 10px yellow;
 }
 
 .more-blog-btn-container{
@@ -261,6 +268,9 @@ body {
   .head-icon img {
     width: 40vw;
   }
+  .head-title-text {
+    font-size: xx-large;
+  }
   .head-text {
     display: flex;
     flex-direction: column;
@@ -275,6 +285,7 @@ body {
   }
   .blog-view-heading {
     font-size: x-large;
+    margin-left: 10px;
   }
   .blog-view-content {
     font-size: medium;
@@ -308,4 +319,7 @@ body {
     align-items: center;
     justify-content: center;
   } */
+  .blog-img1{
+    height: 100%;
+  }
 }
