--- a/src/index.css
+++ b/src/index.css
@@ -207,7 +207,7 @@ body {
 .footer-options{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
+  grid-gap: 0px 10px;
   margin-top: 20px;
 }
 .single-option{
