--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,9 @@ body {
   width: 100%;
   background-color: #0F0529;
 }
+.blog-footer-container2{
+  background-color: rgb(33, 33, 33);
+}
 /* .title-and-icons{
   padding: 10px;
   width: 75vw;
