--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 70vh;
 }
 .newsletter-content {
   width: 80vw;
@@ -62,7 +62,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 40vh;
+  /* height: 65vh; */
   padding: 20px;
   border-bottom: grey 1px solid;
 }
@@ -87,6 +87,19 @@ body {
   margin-top: 10px;
   font-size: xx-large;
 }
+.blog-img-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+  width: 100%;
+}
+.blog-card-img {
+  width: 70%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
 .blog-desc {
   margin-right: 10px;
   color: #7f7b7b;
@@ -110,7 +123,7 @@ body {
 
 .head-container {
   display: flex;
-  height: 50vh;
+  height: max-content;
 }
 .head-icon {
   width: 50vw;
@@ -140,6 +153,46 @@ body {
   padding: 10px;
   color: #7f7b7b;
 }
+/* Subscribe Block CSS ------------------------------------------------ */
+.subscribe-block-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  width: 100%;
+  margin-top: 20px;
+}
+.subscribe-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+  padding: 20px;
+  /* border: 1px solid #ccc; */
+  border-radius: 10px;
+  background-color: #393737;
+  cursor: pointer; /* Change cursor to pointer when hovering over the block */
+}
+
+.subscribe-button {
+  background-color: #4e4c4c;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* Style for the tagline */
+.tagline {
+  margin-bottom: 10px;
+  font-style: italic;
+  color: white;
+}
+
+/* ------------------------------------------------------------------ */
 .blog-view-main-container{
   display: flex;
   flex-direction: column;
@@ -244,9 +297,64 @@ body {
   transform: scale(1.1);
 }
 
+/* Navbar styles -------------------------------------------------------- */
+.navbar {
+  background-color: black;
+  color: white;
+  padding: 10px 0;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* Logo styles */
+.logo {
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: white;
+}
+
+/* Menu button styles */
+.menu-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.menu-bar {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+}
+
+/* Menu options styles */
+.nav-links {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-links li {
+  margin-left: 20px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: white;
+}
 
 
-/* Media queries for responsiveness */
+/* Media queries for responsiveness ---------------------------------------------------*/
 @media (max-width: 600px) {
   .newsletter-content input[type="email"] {
     width: 80vw;
@@ -255,9 +363,13 @@ body {
   .newsletter-content p {
     font-size: 35px;
   }
-
+  /* ------------------------------------- */
   .blog-grid-container {
     grid-template-columns: 1fr;
+  }
+  .blog-card-img {
+    width: 100%;
+    /* height: auto; */
   }
   .head-container {
     display: flex;
@@ -281,6 +393,10 @@ body {
     text-align: center;
     width: 100vw;
   }
+  /* Subscribe block ---------------- */
+  .subscribe-block {
+     width: 70%;
+  } 
 
   /* Full blog page css ------------- */
   .blog-view-container {
@@ -325,5 +441,38 @@ body {
   } */
   .blog-img1{
     height: 100%;
+  }
+
+  /* Navbar -------------------------------------------- */
+  .menu-button {
+    display: block;
+  }
+
+  .menu-bar {
+    margin: 4px 0;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background-color: black;
+    padding: 20px;
+  }
+
+  .nav-links li {
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+
+  .nav-links a {
+    color: white;
+  }
+
+  .show-menu {
+    display: flex;
   }
 }
