--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,7 @@ body {
 }
 .subscribe-block {
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -173,8 +174,20 @@ body {
   padding: 20px;
   /* border: 1px solid #ccc; */
   border-radius: 10px;
-  background-color: #393737;
+  /* background-color: #393737; */
   cursor: pointer; /* Change cursor to pointer when hovering over the block */
+}
+
+.subscribe-block::before{
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: url("colorful_bg.jpg") no-repeat center center/cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.5;
 }
 
 .subscribe-button {
@@ -505,13 +518,13 @@ body {
     left: 0;
     width: 100%;
     background-color: black;
-    padding: 20px;
+    padding: 20px 0px;
   }
 
-  .nav-links li {
+  /* .nav-links li {
     margin-left: 5px;
     margin-bottom: 10px;
-  }
+  } */
 
   .nav-links a {
     color: white;
@@ -521,3 +534,5 @@ body {
     display: flex;
   }
 }
+
+
