--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,7 @@
 /* Navbar styles */
 .navbar {
     background-color: black;
-    color: white;
+    color: rgb(159, 46, 46);
     padding: 10px 0;
   }
   
