--- a/src/index.css
+++ b/src/index.css
@@ -100,14 +100,15 @@ body {
   height: 100%;
   object-fit: cover;
   border-radius: 20px;
+  margin-top: 10px;
+  /* margin-bottom: 20px; */
 }
 .blog-desc {
   margin-right: 10px;
   color: #7f7b7b;
-  /* overflow: hidden; Hides overflow */
-  /* text-overflow: ellipsis; */
   font-size: 16px;
   line-height: 25px;
+  margin-top: 20px;
 }
 .blog-details-btn {
   /* margin-top: 2px; */
@@ -248,9 +249,9 @@ body {
   margin-bottom: 20px;
 }
 .blog-footer-container{
-  margin-top: 30px;
+  /* margin-top: 30px; */
   width: 100%;
-  background-color: #0F0529;
+  background-color: black;
 }
 .blog-footer-container2{
   background-color: rgb(33, 33, 33);
@@ -410,6 +411,57 @@ body {
   font-weight: bold;
   cursor: pointer;
 }
+/* Contact page css --------------------------------------- */
+.contact-body{
+  height: calc(100vh - 60px);
+  /* width: 100vw; */
+  background-color: #ddddddbf;
+  /* padding-top: 100px; */
+}
+.contact-heading-banner{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  width: 100%;
+  background-color: #68269a;
+  color: black;
+  font-weight: bold;
+  font-size: 50px;
+}
+.contact-content-block{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  height: calc(100% - 100px);
+  width: 100%;
+  background-color: #ddddddbf;
+}
+.contact-block-heading{
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 70px;
+  margin-bottom: 10px;
+  color: black;
+}
+.contact-left-block-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #393737;
+  border-radius: 20px;
+  color: white;
+}
+.contact-left-block-content p{
+  margin: 20px 0;
+  font-size: 20px;
+  line-height: 30px;
+}
 
 /* Media queries for responsiveness ---------------------------------------------------*/
 @media (max-width: 600px) {
@@ -542,6 +594,23 @@ body {
 
   .show-menu {
     display: flex;
+  }
+
+  /* Contact Us Page ------------------------------ */
+  .contact-heading-banner{
+    margin-top: 80px;
+    font-size: 25px;
+  }
+  .contact-block-heading{
+    font-size: 20px;
+  }
+  .contact-left-block-content{
+    width: 80%;
+  }
+  .contact-left-block-content p {
+    margin: 10px 0;
+    font-size: 15px;
+    line-height: 25px;
   }
 }
 
