--- a/src/index.css
+++ b/src/index.css
@@ -518,6 +518,7 @@ body {
     font-size: x-large;
     font-weight: bold;
     margin-left: 10px;
+    margin-top: 80px;
   }
   .blog-view-content {
     font-size: medium;
