--- a/src/index.css
+++ b/src/index.css
@@ -269,6 +269,7 @@ body {
 .blog-social-title{
   font-size: 30px;
   margin-bottom: 10px;
+  text-align: center;
 }
 .social-icons{
   display: flex;
@@ -338,6 +339,10 @@ body {
 .left-part{
   display: flex;
   align-items: center;
+  cursor: pointer;  
+}
+.left-part:hover{
+  transform: scale(1.1);
 }
 .mid-part{
   display: flex;
@@ -397,6 +402,10 @@ body {
 .nav-links li {
   margin-left: 20px;
 }
+.nav-links li:hover {
+  transform: scale(1.1);
+  text-shadow: 0px 0px 10px yellow;
+}
 .nav-links a {
   text-decoration: none;
   color: white;
@@ -410,6 +419,9 @@ body {
   border: none;
   font-weight: bold;
   cursor: pointer;
+}.nav-subscribe-btn:hover {
+  transform: scale(1.1);
+  /* text-shadow: 0px 0px 10px yellow; */
 }
 /* Contact page css --------------------------------------- */
 .contact-body{
