--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,75 +1,88 @@
 .side-window {
+  position: fixed;
+  top: 0;
+  left: -300px; /* Offscreen initially */
+  width: 300px;
+  height: 60vh;
+  background-color: #333;
+  transition: left 0.3s ease-in-out;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  /* right: -200px;
+  width: 200px;
+  height: 100%; */
+  /* border-left: 1px solid #ccc; */
+  /* transition: right 0.3s ease; */
+}
+
+.side-window ul {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.side-window li {
+  padding: 10px;
+  margin-top: 10px;
+  text-align: center;
+  width: 80%;
+  border-radius: 20px;
+  border-bottom: 1px solid #ccc;
+  background-color: #393737;
+}
+.side-window li:hover {
+  background-color: #555;
+}
+
+.close-button {
+  /* position: absolute; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+  /* top: 15px; */
+  /* left: 15px; */
+  /* align-items: center; */
+  cursor: pointer;
+}
+.text-white {
+  margin-left: 20px;
+}
+.text-white:hover {
+  transform: scale(1.4);
+}
+.text-lit {
+  margin-right: 20px;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.show-sidebar {
+  left: 0; /* Slide in when showMenu is true */
+}
+.icons-in-sidebar {
+  margin: auto;
+  display: flex;
+}
+@media screen and (max-width: 600px) {
+  .side-window {
     position: fixed;
     top: 0;
-    left: -300px; /* Offscreen initially */
-    width: 300px;
-    height: 60vh;
+    left: -100vw;
+    width: 100vw;
+    height: 100vh;
     background-color: #333;
-    transition: left 0.3s ease-in-out; /* Transition for left position */
+    transition: left 0.3s ease-in-out;
   }
-  
-  .side-window ul {
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 20vh;
-    /* margin-top: 40px; */
-    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  }
-  
-  .side-window li {
-    padding: 10px;
-    margin-top: 10px;
-    text-align: center;
-  }
-  .side-window li:hover {
-    background-color: #555;
-  }
-  
-  .close-button {
-    /* position: absolute; */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 40px;
-    /* top: 15px; */
-    /* left: 15px; */
-    /* align-items: center; */
-    cursor: pointer;
-  }
-  .text-white{
-    margin-left: 20px;
-  }.text-white:hover{
-    transform: scale(1.4);
-  }
-  .text-lit{
-    margin-right: 20px;
-    font-size: x-large;
-    font-weight: bold;
-  }
-  
-  .show-sidebar {
-    left: 0; /* Slide in when showMenu is true */
-  }
-  .icons-in-sidebar{
-    margin: auto;
-    display: flex;
-  }
-  @media screen and (max-width: 600px){
-    .side-window {
-        position: fixed;
-        top: 0;
-        left: -100vw;
-        width: 100vw;
-        height: 100vh;
-        background-color: #333;
-        transition: left 0.3s ease-in-out;
-      }
 
-      .show-sidebar {
-        left: 0;
-      }
-      .side-window ul {
-        margin-bottom: 60vh;
-      }
+  .show-sidebar {
+    left: 0;
   }
-  
+  .side-window ul {
+    margin-bottom: 60vh;
+  }
+}
