--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,10 @@ body {
   width: 400px;
   border-radius: 50%;
 }
+.head-icon img:hover {
+  transform: scale(1.01);
+}
+
 .head-text {
   display: flex;
   flex-direction: column;
@@ -269,6 +273,7 @@ body {
 .blog-social-title{
   font-size: 30px;
   margin-bottom: 10px;
+  text-align: center;
 }
 .social-icons{
   display: flex;
@@ -473,6 +478,7 @@ body {
   }
   .head-icon {
     width: 100vw;
+    margin-top: 20px;
   }
   .head-icon img {
     width: 40vw;
