--- a/src/index.css
+++ b/src/index.css
@@ -238,8 +238,8 @@ body {
   color: white;
 }
 .blog-view-content {
-  margin-top: 30px;
-  padding: 20px;
+  margin: 30px 10px 0px 10px;
+  padding: 20px 10px 10px 10px;
   font-size: large;
   background-color: #565358;
   color: white;
@@ -266,14 +266,14 @@ body {
   margin: 20px auto;
 } */
 .blog-footer{
-  padding: 10px;
+  padding: 30px 0px 30px 0px;
   width: 75vw;
   margin: 0px auto;
 }
 .blog-social-title{
   font-size: 30px;
   margin-bottom: 10px;
-  text-align: center;
+  /* text-align: center; */
 }
 .social-icons{
   display: flex;
@@ -284,6 +284,7 @@ body {
   font-size: 30px;
   color: white;
   cursor: pointer;
+  margin-right: 20px;
 }
 .single-icon:hover{
   transform: scale(1.2);
@@ -299,7 +300,8 @@ body {
   /* text-align: ce; */
   cursor: pointer;
   color: white;
-  padding: 10px;
+  /* padding: 10px; */
+  padding: 20px 0px 10px 0px;
 }
 .single-option:hover{
   text-shadow: 0px 0px 10px yellow;
@@ -373,11 +375,11 @@ body {
   list-style: none;
   display: flex;
   align-items: center;
-  margin-left: 20vw;
 }
 .nav-links li {
-  margin-left: 20px;
-  font-size: 12px;
+  /* margin-left: 20px; */
+  margin-right: 20px;
+  font-size: 20px;
 }
 .nav-links li:hover {
   transform: scale(1.1);
@@ -532,6 +534,10 @@ body {
   /* Footer css ------------- */
   .blog-social-title{
     font-size: 20px;
+    /* align-items: center; */
+  }
+  .social-icons{
+    /* justify-content: center; */
   }
   .footer-options{
     grid-template-columns: repeat(2, 1fr);
@@ -562,8 +568,8 @@ body {
   .nav-links {
     display: flex;
     /* flex-direction: column; */
-    align-items: space-between;
-    justify-content: space-around;
+    /* align-items: space-between; */
+    /* justify-content: space-around; */
     position: absolute;
     top: 60px;
     left: 0;
@@ -571,12 +577,20 @@ body {
     background-color: black;
     padding: 20px 0px;
     margin-left: 0%;
+    overflow-x: auto; /* Enable horizontal scroll */
+    white-space: nowrap; /* Prevent wrapping of content */
   }
 
-  /* .nav-links li {
-    margin-left: 5px;
-    margin-bottom: 10px;
-  } */
+  .nav-links li {
+    background-color: rgb(204 0 255 / 60%);
+    margin-right: 20px;
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 10px;
+  }
+  .nav-links li:first-child {
+    margin-left: 10px;
+  }
 
   .nav-links a {
     color: white;
