--- a/src/index.css
+++ b/src/index.css
@@ -375,6 +375,7 @@ body {
   list-style: none;
   display: flex;
   align-items: center;
+  margin-left: 20vw;
 }
 .nav-links li {
   /* margin-left: 20px; */
@@ -579,6 +580,9 @@ body {
     margin-left: 0%;
     overflow-x: auto; /* Enable horizontal scroll */
     white-space: nowrap; /* Prevent wrapping of content */
+  }
+  .nav-links::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
   }
 
   .nav-links li {
