--- a/src/index.css
+++ b/src/index.css
@@ -280,11 +280,10 @@ body {
   margin-top: 10px;
 }
 .single-icon{
-  margin: 0 10px;
+  margin: 0px 20px 0px 0px;
   font-size: 30px;
   color: white;
   cursor: pointer;
-  margin-right: 20px;
 }
 .single-icon:hover{
   transform: scale(1.2);
