--- a/src/index.css
+++ b/src/index.css
@@ -301,6 +301,7 @@ body {
   color: white;
   /* padding: 10px; */
   padding: 20px 0px 10px 0px;
+  text-wrap: nowrap;
 }
 .single-option:hover{
   text-shadow: 0px 0px 10px yellow;
