--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,7 @@ body {
 /* Subscribe Block CSS ------------------------------------------------ */
 .subscribe-block-container{
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   height: fit-content;
   width: 100%;
@@ -185,13 +185,14 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  left: 20%;
-  width: 50%;
+  /* left: 0%; */
+  width: 80%;
   padding: 20px;
   /* border: 1px solid #ccc; */
   border-radius: 10px;
   /* background-color: #393737; */
-  cursor: pointer; /* Change cursor to pointer when hovering over the block */
+  cursor: pointer;
+  margin-left: 10px;
 }
 
 .subscribe-block::before{
@@ -369,7 +370,7 @@ body {
   margin-right: 10px;
 }
 .nav-title-name{
-  font-size: 30px;
+  font-size: 22px;
   font-weight: bold;
   margin-left: 10px;
 }.nav-title-name:hover {
@@ -378,12 +379,12 @@ body {
 }
 .menu-container {
   position: relative;
+  display: flex;
 }
 .menu-container:hover{
   cursor: pointer;
   transform: scale(1.1);
 }
-
 .nav-links {
   list-style: none;
   display: flex;
@@ -468,6 +469,39 @@ body {
   line-height: 30px;
 }
 
+/* Single blog page css ------------------------------------- */
+.single-blog-title{
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 80px;
+  margin-left: 20px;
+}
+.single-blog-img-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+  width: 100%;
+  margin-top: 20px;
+}
+.single-blog-img-container img{
+  width: 50%;
+  height: max-content;
+  object-fit: contain;
+  /* border-radius: 20px; */
+  margin-bottom: 20px;
+}
+.single-blog-content{
+  margin: 30px 10px 0px 10px;
+  padding: 20px 10px 10px 10px;
+  font-size: large;
+  background-color: #565358;
+  color: white;
+  border-radius: 20px;
+}
+
+
+
 /* Media queries for responsiveness ---------------------------------------------------*/
 @media (max-width: 600px) {
   .newsletter-content input[type="email"] {
@@ -510,6 +544,9 @@ body {
     width: 100vw;
   }
   /* Subscribe block ---------------- */
+  .subscribe-block-container{
+    justify-content: center;
+  }
   .subscribe-block {
      width: 70%;
      left: 0%;
@@ -541,9 +578,9 @@ body {
     border-bottom-left-radius: 30px;
   }
 
-  .blog-decoration {
+  /* .blog-decoration {
     
-  }
+  } */
 
   /* Footer css ------------- */
   .blog-social-title{
@@ -555,6 +592,9 @@ body {
   }
   .footer-options{
     grid-template-columns: repeat(2, 1fr);
+  }
+  .single-option{
+    font-size: 12px;
   }
   /* .title-and-icons{
     display: flex;
@@ -585,7 +625,7 @@ body {
     /* align-items: space-between; */
     /* justify-content: space-around; */
     position: absolute;
-    top: 60px;
+    top: 55px;
     left: 0;
     width: 100%;
     background-color: black;
@@ -635,6 +675,16 @@ body {
     margin: 10px 0;
     font-size: 15px;
     line-height: 25px;
+  }
+  /* Single blog css */
+  .single-blog-title{
+    font-size: x-large;
+  }
+  .single-blog-img-container{
+    flex-direction: column;
+  }
+  .single-blog-img-container img{
+    width: 100%;
   }
 }
 
