--- a/src/index.css
+++ b/src/index.css
@@ -395,6 +395,7 @@ body {
   /* margin-left: 20px; */
   margin-right: 20px;
   font-size: 20px;
+  /* text-wrap: nowrap; */
 }
 .nav-links li:hover {
   transform: scale(1.1);
